# WebHeroes

./: .gitignore  CMakeLists.txt  Caddyfile  Dockerfile  LobbyProgress.drawio  README.md  api_reference.md  docker-compose.yaml  dockerless-run.bat  notes.md  requirements.txt
drawio/: DatabaseLayout.drawio  FullStack-Diagram.drawio  PrototypeDiagram.drawio  Untitled Diagram.drawio  WebPageLayout.drawio  psihogram.drawio
src/: main.py
src/BaseMods/base/: data.lua
src/BaseMods/base_1.0.0/: data.lua  info.json  info.lua
src/BaseMods/core_1.0.0/: data.lua  info.json  info.lua
src/LuaBridge/: Dockerfile  LuaBridge.pyi  base_prototype.c  base_prototype.h  compile.bat  compile.py  lua_bridge.c  lua_sandbox.c  lua_sandbox.h  prototype_definition.c  prototype_definition.h
src/WebHeroes/: DatabaseBridge.py  Dockerfile  LobbyManager.py  LobbyUpdate.py  LuaBridge.pyi  PresenceStatus.py  Room.py  RouteManager.py  SocketEvent.py  User.py  UserManager.py  WebHeroes.py  config.py  main.py  requirements.txt  response_types.py
src/WebHeroesApp/: AnimatedSprite2d.cs.uid  ButtonTemplate.cs  ButtonTemplate.cs.uid  LoginRegisterMenu.tscn  LoginRegisterPageContainer.cs  LoginRegisterPageContainer.cs.uid  MainMenu.cs  MainMenu.cs.uid  WebHeroesApp.csproj  caddy_root.crt  icon.svg.import  main_menu.tscn  project.godot  silenk_library.cs
src/ZLib/: Console.py  StaticClass.py
src/ZancmokLib/: dataclass_util.py
src/templates/: index.html  modding-documentation.html  online-lobbies.html
src/web-heroes-app-(copy)/: WebHeroesApp.csproj.old  WebHeroesApp.sln  cert.crt  project.godot
(+267 files in other folders)
